Use old keyboard shortcuts pages for older Netflix pages; support pgup/pgdn; loop around when faster for pgup, pgdn, home, end; support genre pages; fix isvisible logic to look only at horizontal portion; toggle scrollbars feature removed; misc bug fixes

--- a/css/flixplus.css
+++ b/css/flixplus.css
@@ -36,10 +36,12 @@
 	outline-offset: 5px !important;
 }
 
+.fp_keyboard_selected_red {
+	outline: 10px solid #b9090b !important;
+}
+
 .fp_keyboard_mylist_selected {
-	border-style: solid !important;
-	border-color: #b9090b !important;
-	border-width: 5px !important
+	outline: 5px solid #b9090b !important;
 }
 
 /* from http://davidwalsh.name/spoiler-filter */
